MB-46988: Specify link scope for all target_link_libraries()

In a subsequent patch every target using precompiled headers needs to
have an extra target link dependancy adding via
target_link_libraries(foo PRIVATE ...). This is incompatible if a
given target foo uses the unscoped (legacy) version of
target_link_libraries.

Therefore update all uses of target_link_libraries to specify the link
scope.

Change-Id: Ib567be1354f9ccd98ebbbd31db40f9deb77a2eb3
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/156092
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>